syntax = "proto3";

package pb;

option go_package = "github.com/yigithancolak/monke-bank-api/pb";

message LoginUserRequest {
    string email = 1;
    string password = 2;
};

message LoginUserResponse {
    string access_token = 1;
    string refresh_token = 2;
}
