syntax = "proto3";

package pb;

import "rpc_create_user.proto";

import "rpc_login_user.proto";

option go_package = "github.com/yigithancolak/monke-bank-api/pb";

service MonkeBank {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}
}